--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+/* .Backtottop{
+    display: block;
+    text-align: center;
+    color: #111;
+    padding: 15px 0;
+    line-height: 19px;
+    font-size: 13px;
+} */
